--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Janus Gateway API Demo",
   "main": "index.js",
+  "module": "",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve:backend": "nodemon --watch backend backend/index.js",
+    "serve": "concurrently -n backend,client \"npm run serve:backend\" \"webpack serve\""
   },
   "homepage": "https://fsociety.github.io/webrtc-basics",
   "author": "",
@@ -16,6 +18,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
     "@webpack-cli/generators": "^3.0.7",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
@@ -24,10 +28,14 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "babel-loader": "^9.1.3",
+    "cors": "^2.8.5",
     "css-loader": "^6.8.1",
+    "express": "^4.19.2",
     "postcss-loader": "^7.3.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "style-loader": "^3.3.3",
     "uuid": "^9.0.1"
   }
